<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_Advertisements"
            android:icon="@drawable/ads"
            android:title="@string/title_activity_navegation_drawer" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/categories"
            android:title="@string/title_activity_main2" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile2"
            android:title="@string/title_activity_profile" />
        <item
            android:id="@+id/nav_saved_ads"
            android:icon="@drawable/ic_saved_ads"
            android:title="@string/title_activity_saved_ads" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/About" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact"
            android:title="@string/ContactUs" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/Logout" />
    </group>

    <!--<item android:title="@string/Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="@string/Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="@string/Send" />-->

    <!--</menu>-->
    <!--</item>-->


</menu>
