<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forgotPasswordLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/forgotPassword"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:typeface="serif" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layoutDirection="locale">

            <RadioButton
                android:id="@+id/radioButtonSMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:checked="true"
                android:text="@string/SendToSmS"
                android:textColor="@color/signupBu"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/radioButtonEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:text="@string/SendToEmail"
                android:textColor="@color/signupBu"
                android:textSize="20dp" />
        </RadioGroup>


        <Button
            android:id="@+id/sendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/signupBu"
            android:text="@string/Continue"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/signupBu"
            android:text="@string/Cancel"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>