<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forgotPasswordLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/emailValidation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/sentCode"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/emailValidation"
            android:textColor="@color/editTextPadding"
            android:textSize="15dp"
            android:typeface="serif" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/enterSixCode"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutAddCodeValidation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_weight="0.5">

                <EditText
                    android:id="@+id/editTextAddCodeValidation"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/background_text"
                    android:gravity="center"
                    android:hint="######"
                    android:inputType="numberDecimal"
                    android:maxLength="6" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/addCodeValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/signupBu"
            android:text="@string/Continue"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/signupBu"
            android:text="@string/Cancel"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>

