<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/Edit"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutEditComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_weight="0.5">

        <EditText
            android:id="@+id/editComment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_text"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/writeComment"
            android:inputType="textMultiLine"
            android:paddingTop="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:width="25dp"
            android:background="@color/signupBu"
            android:text="@string/Update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:width="25dp"
            android:background="@color/signupBu"
            android:text="@string/Cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>